2013-10-03 MP4 sources are now prefered in video addon
2013-10-02 Fixed problem with Navigation Bar with page indexes.
2013-10-02 Fixed problem with blocking Line Number addon and added new class 'disable' to '.outer' div when property 'Disable' is on true
2013-10-01 Added page name to page loaded event
2013-10-01 Fixed problem with definition of disable and not activity properties
2013-10-01 Fixed problem with scoring in graph
2013-09-30 Fixed problem with points in Image Indentification addon
2013-09-30 Fixed problem with mouseleave.
2013-09-30 Fixed problem with Drawing addon. Loading state and eraser.
2013-09-27 Fixed problem with displaying Glossary on book view
2013-09-26 Fixed displaying Glossary and other addons (Video, Image etc) on the following addons: Feedback, True/False, Table
2013-09-23 Fixed TextParserProxy issue
2013-09-23 Added simulate Tap event listeners to 4 addons (True/False, Connection, Image Identification, Text Identification)
2013-09-20 Fixed addon on Feedback issue
2013-09-19 Fixed Glossary links on feedback
2013-09-19 Added TextParserProxy: parse, connectLinks - in Commons (now in version 1.8)
2013-09-19 Added Drawing module. This module allows to draw on digital canvas.
2013-09-18 Fixed Glossary issue
2013-09-17 Script allows True and False values
2013-09-16 Added getState and setState for Puzzle
2013-09-16 goToPageIndex added to API
2013-09-13 Choice can work in not activity mode
2013-09-12 Addon Glossary can not hide other addons
2013-09-12 Fixed problem with Glossary in Preview
2013-09-11 Fixed problem with image gap not activity under show errors mode
2013-09-06 Fixed problem with Glossary and Popup
2013-09-06 Fixed problem with draggable gaps and state
2013-09-06 Fixed problem with going to first page in book mode
2013-09-05 Popup z-index = 100
2013-09-04 Added Book API
2013-09-03 Fixed Paragraph for non existing tinymce editor
2013-09-03 Added default sizes to ic_popup_page CSS class 