@@ -1,3 +1,4 @@
+2013-10-03 Added stop propagation to addons: Connection, Hangman, Image Identification, Magic boxes, Gamememo, Multiplegap, Puzzle, Text selection, True False, Writing Calculations, Navigation Bar, Slide show, Image viewer, Animation
 2013-10-03 MP4 sources are now prefered in video addon
 2013-10-02 Fixed problem with Navigation Bar with page indexes.
 2013-10-02 Fixed problem with blocking Line Number addon and added new class 'disable' to '.outer' div when property 'Disable' is on true
